.env changed to production values

--- a/.env
+++ b/.env
@@ -1,14 +1,14 @@
 
-ENV=local
+ENV=PRODUCTION
 
 # WEB SERVER VARIABLES
-DOMAIN=192.168.1.81
+DOMAIN=0.0.0.0
 PORT=80
 
 # DATABASE VARIABLES
-DB_HOST=localhost
+DB_HOST=carrodemaderadb.postgres.database.azure.com
 DB_PORT=5432
 DB_NAME=carro_de_madera_db
-USER=postgres
-PASS=postgres
+USER=carrodemaderauserdb
+PASS=plumonrojO(88)
 TIMEZONE=America/Mexico_City
