added strategy to load diferent static files folder in each deploy

--- a/.env
+++ b/.env
@@ -12,3 +12,9 @@ DB_NAME=carro_de_madera_db
 USER=carrodemaderauserdb
 PASS=plumonrojO(88)
 TIMEZONE=America/Mexico_City
+
+#STATIC RESOURCES VARIABLES
+STATIC_FILES_VERSION=003
+
+STATIC_FOLDER="/static_$STATIC_FILES_VERSION"
+WEB_COMPONENTS_FOLDER="$STATIC_FOLDER/web_components"
