envio de correo agregado

--- a/.env
+++ b/.env
@@ -18,3 +18,9 @@ STATIC_FILES_VERSION=003
 
 STATIC_FOLDER="/static_$STATIC_FILES_VERSION"
 WEB_COMPONENTS_FOLDER="$STATIC_FOLDER/web_components"
+
+# SMTP (EMAIL) VARIABLES
+SMTP_HOST = "smtp.mailtrap.io"
+SMTP_PORT = 465
+SMTP_USERNAME = "daa62e13155797"
+SMTP_PASSWORD = "c30a5d66a683ae"
