added localBusiness info, access to constants in template, get paymentinfo, etc

--- a/.env
+++ b/.env
@@ -24,3 +24,8 @@ SMTP_HOST = "smtp.mailtrap.io"
 SMTP_PORT = 465
 SMTP_USERNAME = "daa62e13155797"
 SMTP_PASSWORD = "c30a5d66a683ae"
+
+PAYMENT_INFO_CLABE = "012-180-0158-3596-8265"
+PAYMENT_INFO_OWNER = "Mario Marquez V."
+PAYMENT_INFO_BANK_NAME = "BBVA"
+PAYMENT_INFO_CONCEPT = "Pago TDM"
